Remove deprecated URL constructor (#10272)