@@ -6,6 +6,8 @@ import static org.junit.jupiter.api.Assertions.assertNull;
 
 import java.io.IOException;
 import java.net.MalformedURLException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
@@ -45,58 +47,58 @@ public class FrankPropertyLookupProviderTest {
 	}
 
 	@Test
-	public void dockerClassPath() throws MalformedURLException {
+	public void dockerClassPath() throws MalformedURLException, URISyntaxException {
 		List<URL> urls = new ArrayList<>();
-		urls.add(new URL("jar:file:/usr/local/tomcat/webapps/ROOT/WEB-INF/lib/ibis-adapterframework-core-7.9.6.jar!/log4j4ibis.properties"));
-		urls.add(new URL("file:/opt/frank/resources/log4j4ibis.properties"));
+		urls.add(new URI("jar:file:/usr/local/tomcat/webapps/ROOT/WEB-INF/lib/ibis-adapterframework-core-7.9.6.jar!/log4j4ibis.properties").toURL());
+		urls.add(new URI("file:/opt/frank/resources/log4j4ibis.properties").toURL());
 
 		urls.sort(new UrlLocationComparator());
 
-		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.get(0).toExternalForm());
+		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.getFirst().toExternalForm());
 	}
 
 	@Test
-	public void dockerClassPathReverse() throws MalformedURLException {
+	public void dockerClassPathReverse() throws MalformedURLException, URISyntaxException {
 		List<URL> urls = new ArrayList<>();
-		urls.add(new URL("file:/opt/frank/resources/log4j4ibis.properties"));
-		urls.add(new URL("jar:file:/usr/local/tomcat/webapps/ROOT/WEB-INF/lib/ibis-adapterframework-core-7.9.6.jar!/log4j4ibis.properties"));
+		urls.add(new URI("file:/opt/frank/resources/log4j4ibis.properties").toURL());
+		urls.add(new URI("jar:file:/usr/local/tomcat/webapps/ROOT/WEB-INF/lib/ibis-adapterframework-core-7.9.6.jar!/log4j4ibis.properties").toURL());
 
 		urls.sort(new UrlLocationComparator());
 
-		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.get(0).toExternalForm());
+		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.getFirst().toExternalForm());
 	}
 
 	@Test
-	public void webArchive() throws MalformedURLException {
+	public void webArchive() throws MalformedURLException, URISyntaxException {
 		List<URL> urls = new ArrayList<>();
-		urls.add(new URL("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties"));
-		urls.add(new URL("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties"));
+		urls.add(new URI("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties").toURL());
+		urls.add(new URI("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties").toURL());
 
 		urls.sort(new UrlLocationComparator());
 
-		assertEquals("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties", urls.get(0).toExternalForm());
+		assertEquals("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties", urls.getFirst().toExternalForm());
 	}
 
 	@Test
-	public void webArchiveReverse() throws MalformedURLException {
+	public void webArchiveReverse() throws MalformedURLException, URISyntaxException {
 		List<URL> urls = new ArrayList<>();
-		urls.add(new URL("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties"));
-		urls.add(new URL("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties"));
+		urls.add(new URI("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties").toURL());
+		urls.add(new URI("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties").toURL());
 
 		urls.sort(new UrlLocationComparator());
 
-		assertEquals("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties", urls.get(0).toExternalForm());
+		assertEquals("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties", urls.getFirst().toExternalForm());
 	}
 
 	@Test
-	public void webArchiveWithClassPathResource() throws MalformedURLException {
+	public void webArchiveWithClassPathResource() throws MalformedURLException, URISyntaxException {
 		List<URL> urls = new ArrayList<>();
-		urls.add(new URL("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties"));
-		urls.add(new URL("file:/opt/frank/resources/log4j4ibis.properties"));
-		urls.add(new URL("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties"));
+		urls.add(new URI("jar:file:/foo/wtpwebapps/iaf-test/WEB-INF/lib/frankframework-core-9.3.0-SNAPSHOT.jar!/log4j4ibis.properties").toURL());
+		urls.add(new URI("file:/opt/frank/resources/log4j4ibis.properties").toURL());
+		urls.add(new URI("file:/foo/wtpwebapps/iaf-test/WEB-INF/classes/log4j4ibis.properties").toURL());
 
 		urls.sort(new UrlLocationComparator());
 
-		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.get(0).toExternalForm());
+		assertEquals("file:/opt/frank/resources/log4j4ibis.properties", urls.getFirst().toExternalForm());
 	}
 }
